[Qt][WK2] navigationType is missing in new API https://bugs.webkit.org/show_bug.cgi?id=78867

Patch by Michael Tyutyunik <michael.tyutyunik@nokia.com> on 2012-02-22
Reviewed by Simon Hausmann.

In QtWebPagePolicyClient::decidePolicyForNavigationAction()
navigationType argument is dropped by mistake. Adding it back
and make it available through NavigationRequest.

* UIProcess/API/qt/qquickwebview_p.h:
* UIProcess/API/qt/qwebnavigationrequest.cpp:
(QWebNavigationRequestPrivate::QWebNavigationRequestPrivate):
(QWebNavigationRequestPrivate):
(QWebNavigationRequest::QWebNavigationRequest):
(QWebNavigationRequest::navigationType):
* UIProcess/API/qt/qwebnavigationrequest_p.h:
* UIProcess/qt/QtWebPagePolicyClient.cpp:
(QtWebPagePolicyClient::decidePolicyForNavigationAction):
(toQuickWebViewNavigationType):
* UIProcess/qt/QtWebPagePolicyClient.h:
(QtWebPagePolicyClient):

Canonical link: https://commits.webkit.org/96397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108614 268f45cc-cd09-0410-ab3c-d52691b4dbfc